--- a/src/App.css
+++ b/src/App.css
@@ -1,13 +1,13 @@
-.App {
+/* .App {
   text-align: center;
-}
+} */
 
-body {
+/* body {
   font-family: Arial, sans-serif;
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-}
+} */
 
 main {
   padding: 2rem;
