--- a/src/components/AdminJobs.css
+++ b/src/components/AdminJobs.css
@@ -69,7 +69,8 @@ body {
 /* Button Group */
 .button-group {
   display: flex;
-  justify-content: flex-start;
+  justify-content: space-evenly;
+  margin-left:-1rem ;
 }
 
 /* Styling for individual buttons */
@@ -121,6 +122,7 @@ body {
   box-shadow: 0 5px 15px rgba(0, 0, 0, 0.2);
   max-width: 500px;
   width: 100%;
+  margin-top: 2rem;
 }
 
 .overlay {
