--- a/src/components/Login.css
+++ b/src/components/Login.css
@@ -23,6 +23,8 @@
     box-sizing: border-box;
 }
 
+/* kjhslad */
+
 
 /* Right section styles */
 .right-section {
@@ -108,3 +110,5 @@
 .signup-link:hover {
     color: #0056b3;
 }
+
+/* Style for the forgot password link */
