--- a/src/components/UpdateJob.css
+++ b/src/components/UpdateJob.css
@@ -1,5 +1,7 @@
 /* Container styling for the update job form */
 .update-job {
+  overflow-y: auto;
+  height: 75vh;
   background-color: #f9f9f9;
   padding: 25px;
   border-radius: 10px;
